--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -11,21 +11,33 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.47.8",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/create-router": "^1.90.0",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-router": "^1.90.0",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-toastify": "^10.0.6",
+    "sass": "^1.83.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tanstack/router-devtools": "^1.90.0",
+    "@tanstack/router-plugin": "^1.87.13",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
