--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -21,6 +23,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/create-router": "^1.90.0",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.10",
     "@tanstack/react-router": "^1.90.0",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
@@ -31,7 +34,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-rewards": "^2.0.4",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.0",
     "sass": "^1.83.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
