--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-rewards": "^2.0.4",
     "react-toastify": "^10.0.6",
+    "react-virtuoso": "^4.12.3",
     "recharts": "^2.15.0",
     "sass": "^1.83.0",
     "tailwind-merge": "^2.5.5",
